--- a/css/style.css
+++ b/css/style.css
@@ -671,7 +671,7 @@ a {
     border: 1px solid rgba(0, 0, 0, 0.2);
     border-radius: 4px;
     max-height: 80vh;
-    overflow-y: auto;
+    overflow-y: auto;   
 }
 
 .modal__close {
@@ -717,6 +717,7 @@ a {
 }
 .show {
     display: block;
+    overflow: hidden;
 }
 .fade {
     animation: fade 1.7s linear;
